--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,16 @@
     <artifactId>selenium-java</artifactId>
     <version>4.24.0</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.2.5</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.5</version>
+</dependency>
 
   </dependencies>
   
